# layout-image

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: attributes.md  tags.md
examples/: .gitignore  README.md  checkerboard.xml  clear-images.sh  colored-bar.xml  font-size.xml  font.xml  hello-world.xml  list-background.xml  list.xml  text-color.xml  user-stats.xml
examples/flow/: double-box-first.xml  double-box-second.xml  hovering-box.xml
examples/image-import/: hello-world-image.xml
examples/positioning/: further-down.xml  further-right.xml
examples/text-align/: center-text.xml  left-text.xml  right-text.xml
src/layoutimg/: __init__.py  __main__.py  arith.py  config.toml  layoutenv.py  layoutimg.py  layoutnode.py  setup.py
src/layoutimg/renderer/: __init__.py  renderer.py
tests/: arith_test.py  example_test.py  layout_test.py  random_text_test.py  renderer_test.py
